# mopr-geospatial-hackathon

./: .env.example  .gitignore  README.md  config.py  dataset.py  datasets.py  evaluate.py  losses.py  main.py  model.py  pretrain.py  pyproject.toml  train.py  train_phase_1.py  train_phase_2.py  train_refiner.py  transforms.py  utils.py
config/: __init__.py  eval.py  inference.py  pretrain.py  shared.py  train.py
processing/: __init__.py  dataset.py  postprocessing.py  preprocessing.py  transforms.py
training/: __init__.py  io.py  phase2.py  phase_io.py  pretrain.py  primitives.py  train.py
