[project]
name = "mopr-geospatial-hackathon"
version = "0.1.0"
description = "An IITT-NiF MoPR hackathon for geospatial intelligence"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.13.0.92",
    "rasterio>=1.5.0",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchgeo>=0.9.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
